<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ellisallmond.payrolltracker.NewPayActivity"
    tools:showIn="@layout/activity_new_pay"
    android:background="@android:color/holo_green_light"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/totalHoursEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="55sp"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/_0"
        android:textSize="25sp"
        android:textIsSelectable="false"
        android:focusable="false"
        android:clickable="false" />

    <TextView
        android:id="@+id/totalHoursTxt"
        android:text="@string/total_hours"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toLeftOf="@+id/totalHoursEditTxt"
        android:layout_toStartOf="@+id/totalHoursEditTxt"/>



    <EditText
        android:id="@+id/totalDollarsEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:maxLength="7"
        android:inputType="numberDecimal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/totalHoursEditTxt"
        android:text="@string/_0_00"
        android:textSize="25sp"
        android:textIsSelectable="false"
        android:focusable="false"
        android:clickable="false"/>

    <TextView
        android:id="@+id/totalDollarsTxt"
        android:text="@string/total_dollars"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_toLeftOf="@id/totalDollarsEditTxt"
        android:layout_toStartOf="@id/totalDollarsEditTxt"
        android:layout_below="@+id/totalHoursEditTxt"/>


    <Button
        android:id="@+id/btnCalcTotals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_totals"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/totalDollarsEditTxt"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnCalcTotals"/>


    <ScrollView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnSave"
        android:background="@android:color/background_light"
        android:overScrollMode="always">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mondayTxt"
                android:text="@string/monday"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/monHoursEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="55dp"
                android:maxLength="2"
                android:inputType="numberDecimal"
                android:layout_marginTop="4dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/mondayTxt" />

            <TextView
                android:id="@+id/monHoursTxt"
                android:text="@string/hours"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@id/monHoursEditTxt"
                android:layout_toStartOf="@id/monHoursEditTxt"
                android:layout_below="@+id/mondayTxt"/>



            <TextView
                android:id="@+id/tuesdayTxt"
                android:text="@string/tuesday"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/monHoursTxt"/>

            <EditText
                android:id="@+id/tueHoursEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="55dp"
                android:maxLength="2"
                android:inputType="numberDecimal"
                android:layout_marginTop="4dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tuesdayTxt" />

            <TextView
                android:id="@+id/tueHoursTxt"
                android:text="@string/hours2"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/tuesdayTxt"
                android:layout_toLeftOf="@id/tueHoursEditTxt"
                android:layout_toStartOf="@id/tueHoursEditTxt"/>



            <TextView
                android:id="@+id/wednesdayTxt"
                android:text="@string/wednesday"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tueHoursTxt"/>

            <EditText
                android:id="@+id/wedHoursEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="55dp"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:layout_marginTop="4dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/wednesdayTxt" />

            <TextView
                android:id="@+id/wedHoursTxt"
                android:text="@string/hours3"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/wednesdayTxt"
                android:layout_toLeftOf="@id/wedHoursEditTxt"
                android:layout_toStartOf="@id/wedHoursEditTxt"/>



            <TextView
                android:id="@+id/thursdayTxt"
                android:text="@string/thursday"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wedHoursTxt"/>

            <EditText
                android:id="@+id/thuHoursEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="55dp"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:layout_marginTop="4dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/thursdayTxt" />

            <TextView
                android:id="@+id/thuHoursTxt"
                android:text="@string/hours4"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/thursdayTxt"
                android:layout_toLeftOf="@id/thuHoursEditTxt"
                android:layout_toStartOf="@id/thuHoursEditTxt"/>



            <TextView
                android:id="@+id/fridayTxt"
                android:text="@string/friday"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thuHoursTxt"/>

            <EditText
                android:id="@+id/friHoursEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="55dp"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:layout_marginTop="4dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/fridayTxt" />

            <TextView
                android:id="@+id/friHoursTxt"
                android:text="@string/hours5"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/fridayTxt"
                android:layout_toLeftOf="@id/friHoursEditTxt"
                android:layout_toStartOf="@id/friHoursEditTxt"/>



            <TextView
                android:id="@+id/saturdayTxt"
                android:text="@string/saturday"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/friHoursTxt"/>

            <EditText
                android:id="@+id/satHoursEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="55dp"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:layout_marginTop="4dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/saturdayTxt" />

            <TextView
                android:id="@+id/satHoursTxt"
                android:text="@string/hours6"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/saturdayTxt"
                android:layout_toLeftOf="@id/satHoursEditTxt"
                android:layout_toStartOf="@id/satHoursEditTxt"/>



            <TextView
                android:id="@+id/sundayTxt"
                android:text="@string/sunday"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/satHoursTxt"/>

            <EditText
                android:id="@+id/sunHoursEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="55dp"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:layout_marginTop="4dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/sundayTxt" />

            <TextView
                android:id="@+id/sunHoursTxt"
                android:text="@string/hours7"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/sundayTxt"
                android:layout_toLeftOf="@id/sunHoursEditTxt"
                android:layout_toStartOf="@id/sunHoursEditTxt"/>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
